# Cartotrac-vitrine

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml
cartotrac-backend/: .env.example  alembic.ini  pyproject.toml
cartotrac-backend/alembic/: env.py
cartotrac-backend/alembic/versions/: 39549068e3dd_create_clients_table.py  8f3a0a1b2c4d_create_quotes_table.py  9328a24b7f62_baseline_schema.py  a7b8c9d0e1f2_add_message_participants_to_notifications.py  b1c2d3e4f5a6_add_is_admin_to_users.py  b2c3d4e5f6a7_create_quote_requests_table.py  c3d4e5f6a7b8_add_role_to_users.py  c4d5e6f7a8b9_attach_tasks_to_business_objects.py  d4e5f6a7b8c9_create_dashboard_tables.py  d5e6f7a8b9c0_create_refresh_token_sessions.py  e5f6a7b8c9d0_add_cadastre_context_to_quotes.py  f6a7b8c9d0e1_add_event_scheduling_fields.py
cartotrac-backend/scripts/: export_openapi.py  normalize_legacy_admin.py
cartotrac-backend/src/: main.py
cartotrac-backend/src/api/: router.py
cartotrac-backend/src/api/dependencies/: __init__.py  auth.py
cartotrac-backend/src/core/: config.py  database.py  dependencies.py  dependencies_db.py  lifespan.py  permissions.py  security.py
cartotrac-backend/src/db/: models.py  session.py
cartotrac-backend/src/managers/: auth.py  carto.py  clients.py  dashboard.py  quote_requests.py  quotes.py  users.py
cartotrac-backend/src/renderers/: quote_pdf.py
cartotrac-backend/src/schemas/: auth.py  clients.py  dashboard.py  quote_requests.py  quotes.py  users.py
cartotrac-backend/src/tests/: conftest.py  test_rbac_api.py  test_sql_injection_api.py
(+166 files in other folders)
